--- a/css/post.scss
+++ b/css/post.scss
@@ -7,10 +7,14 @@
 /* * * * * * * * * * *
  *  Post Header
  * * * * * * * * * * */
-.post_desc {
-    color: #777;
-    font-size: 16px;
-    font-style: italic;
+.post-description {
+    margin-bottom: 10px;
+
+    p {
+        color: #777;
+        font-size: 16px;
+        font-style: italic;
+    }
 }
 
 .title_img {
